# rustzen-admin

./: .env.example  Cargo.toml  README-zh.md  README.md
src/common/utils/: time.rs
src/core/: app.rs  config.rs  db.rs  jwt.rs  mod.rs  web_embed.rs
src/features/auth/: router.rs  service.rs  vo.rs
web/: .gitignore  .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/.husky/: pre-commit
web/api/: proxy.js
web/src/: main.tsx  routeTree.gen.ts  style.css
web/src/api/: api.d.ts  index.ts
web/src/api/auth/: auth.d.ts  index.ts
web/src/api/dashboard/: dashboard.d.ts  index.ts
web/src/api/system/dict/: dict.d.ts  index.ts
web/src/api/system/log/: index.ts  log.d.ts
web/src/api/system/menu/: index.ts  menu.d.ts
web/src/api/system/role/: index.ts  role.d.ts
web/src/api/system/user/: index.ts  user.d.ts
web/src/components/auth/: index.tsx
web/src/components/button/: index.tsx
web/src/components/user/: avatar.tsx  index.tsx
web/src/constant/: options.ts  urls.ts
web/src/integrations/: react-query.ts
web/src/integrations/tanstack-query/: layout.tsx  root-provider.tsx
web/src/layouts/: BasicLayout.tsx
web/src/pages/auth/: login.tsx
web/src/pages/dashboard/: index.tsx
web/src/pages/system/dict/: DictModalForm.tsx  index.tsx
web/src/router/: index.tsx  system.tsx
web/src/routes/: 403.tsx  404.tsx  __root.tsx  index.tsx  login.tsx
web/src/routes/system/: dict.tsx  log.tsx  menu.tsx  role.tsx  user.tsx
web/src/stores/: useAuthStore.ts  useLocalStore.ts
web/src/util/: index.ts
(+7 files in other folders)
